--- a/License/1.06.md
+++ b/License/1.06.md
@@ -107,7 +107,7 @@
 20. он состоя в 100 наиболее богатых в обладании правовыми единицами ERA не может увеличивать величину своего обладания ими. А если такое всё же случается, то обязуется в течении суток передать в управление часть этих единиц другому Пользователю так, чтобы величина своего обладания снизилась по крайней мере до предыдущего значения, а величина обладания у получившего их Пользователя не стала больше половины чем у передавшего.
 21. права на действия в Летописи задаются числом правовых единиц ERA, находящихся в обладании у Пользователя, величины первоначального распределения которых задаются согласно записям в начальном наборе (генесиз-блоке) Летописи, либо другими правилами и порядком, заданными в программном обеспечении ERA.
 22. он, кроме Правообладателя программного обеспечения ERA, обязуется не иметь совокупно более чем 10% правовых единиц ERA в обладании (чтобы соблюсти принцип децентрализации). Иначе они должны быть переданы другим участникам в управление.
-23. он предоставляет в открытый общий доступ данные своего безналичного (банковского или электронного) платежа со своего удостоверенного (авторизованного) лицевого счёта в пользу третьего лица, в назначении которого написано «Я, ФИО, соглашаюсь с Лицензией ERA, мой открытый ключ ОТ58», где ФИО — полные фамилия имя и отчество, а ОТ58 — это значение открытого ключа, используемого в  и выраженного в кодировке Base58, причем получатель такого платежа имеет право создать Запись в Летописи с помощью программного обеспечения, в которой получателем будет задан Счёт, соответствующий данному открытому ключу ОТ58, а в сообщении Записи будут указаны все данные этого безналичного платежа включая данные из его назначения. Причем он (Пользователь) соглашается что такой безналичный платеж равнозначен его письменному соглашению с Правообладателем и другими Пользователями Летописи об ведении электронного взаимодействия с ними в Летописи с помощью программного обеспечения, при котором проверка его (Пользователя) электронной подписи (см. ФЗ 63 ст.6 п.2) производится по его открытому ключу ОТ58, который он указал в назначении платежа, и порядку (алгоритму) заданному (реализованному) в программном обеспечении ERA.
+23. он предоставляет в открытый общий доступ данные своего безналичного (банковского или электронного) платежа со своего удостоверенного (авторизованного) лицевого счёта в пользу третьего лица, в назначении которого написано «Я, ФИО, соглашаюсь с Лицензией ERA, мой открытый ключ ОТ58», где ФИО — полные фамилия имя и отчество, а ОТ58 — это значение открытого ключа, используемого в  и выраженного в кодировке Base58, причем получатель такого платежа имеет право создать Запись в Летописи с помощью программного обеспечения, в которой получателем будет задан Счёт, соответствующий данному открытому ключу ОТ58, а в сообщении Записи будут указаны все данные этого безналичного платежа включая данные из его назначения. Причем он (Пользователь) соглашается что такой безналичный платеж равнозначен его письменному соглашению с Правообладателем и другими Пользователями Летописи об ведении электронного взаимодействия с ними в Летописи с помощью программного обеспечения, при котором проверка его (Пользователя) электронной подписи производится по его открытому ключу ОТ58, который он указал в назначении платежа, и порядку (алгоритму) заданному (реализованному) в программном обеспечении ERA.
 24. он, получив безналичный платеж от Пользователя с его личного счета за услугу его удостоверения с назначением платежа «Я, ФИО, соглашаюсь с Лицензией ERA, мой открытый ключ ОТ58», где ФИО — полные фамилия имя и отчество, а ОТ58 — это значение открытого ключа, используемого в программном обеспечении и выраженного в кодировке Base58, обязан послать письмо на этот открытый ключ с заголовком «удостоверен банковским платежом», а в теле письма указать ФИО плательщика и другие данные платежа без персональных данных Пользователя в открытом виде (без шифрования) в случае если внесение персональных данных этого Пользователя будет производиться другим лицом.
 25. созданная им Запись (запись-заявка) является лишь заявлением на внесение её в Летопись и не может быть внесена в Летопись в обязательном порядке. Такую заявку могут удовлетворить только Форжеры по своему усмотрению, при условии что у него достаточно правовых единиц COMPU для расхода на услугу внесения записи-заявки в Летопись согласно правил и порядка работы программного обеспечения ERA и эта запись не нарушает правил и порядка работы Летописи и правил и порядка работы программного обеспечения ERA.
 26. он расходует правовые единицы COMPU на получение услуги внесения записей-заявок в Летопись в количестве, вычисленном согласно правилам и порядка работы программного обеспечения ERA, и которое списывается автоматически со Счёта, созданного из публичного ключа, соответствующего закрытому ключу, с помощью которого создана Электронная подпись для данной Записи.
@@ -130,7 +130,7 @@
 5. Участника, получивший такую запись обязан проверить ее открытый ключ на сайте Заверителя или Правообладателя программного обеспечения ERA, и удостовериться что по данным с этого сайта такой открытый ключ принадлежит (соответствует) данному Пользователю с указанным ФИО, и при подтверждении такого соответствия вложить эту Запись в свою Запись и внести её в Летопись или подать Заявку на внесение этой Записи в Летопись.
 6. После получения этой Записью статуса Электронной подписи “подтвержденная” и появления данных о своей персоне в Летописи в списке персон с присвоенным ею номером, новый Пользователь обязан лично связаться с Заверителем, предоставить свои личные данные, включая данные паспорта или иного документа удостоверяющего личность полностью, и сверить их с данными персоны в списке Летописи под соответствующим номером.
 7. В случае совпадения данных персоны за соответствующим номером в списке Летописи, данных предоставленных Пользователем Заверителю и данных в банковском платеже от этого Пользователя, Заверитель обязан удостоверить этого Пользователя путём создания удостоверяющей Записи в которой указывается ссылка на соответствующую персону по её номеру в Летописи и открытый ключ, который предоставил этот Пользователь в банковском безналичном платеже.
-8. В случае невозможности совершить подтверждающий банковский безналичный платёж, указанный в п.2 раздела 5 настоящего Соглашения, Пользователь должен предоставить в печатном виде подписанное Пользователем соглашение об использовании усиленных неквалифицированных электронных подписей и электронного взаимодействия с Правообладателем программного обеспечения ERA и иными Пользователями программного обеспечения ERA при совершении любых действий с использованием этих электронных ключей и Электронных подписей как с Правообладателем программного обеспечения ERA, так и с иными Пользователями программного обеспечения ERA, в котором проверка его (Пользователя) электронной подписи (см. ФЗ 63 ст.6 п.2) производится по  проверочному (открытому) ключу, который он заявил в соглашении, и порядку (алгоритму) заданному (реализованному) в программном обеспечении ERA.
+8. В случае невозможности совершить подтверждающий банковский безналичный платёж, указанный в п.2 раздела 5 настоящего Соглашения, Пользователь должен предоставить в печатном виде подписанное Пользователем соглашение об использовании усиленных неквалифицированных электронных подписей и электронного взаимодействия с Правообладателем программного обеспечения ERA и иными Пользователями программного обеспечения ERA при совершении любых действий с использованием этих электронных ключей и Электронных подписей как с Правообладателем программного обеспечения ERA, так и с иными Пользователями программного обеспечения ERA, в котором проверка его (Пользователя) электронной подписи производится по  проверочному (открытому) ключу, который он заявил в соглашении, и порядку (алгоритму) заданному (реализованному) в программном обеспечении ERA.
 
 ## 6. Нет гарантий
 Программное обеспечение ERA функционирует по принципу "как есть" без каких-либо гарантий любого рода в отношении программного обеспечения и/или любого содержимого, данных, материалов и/или услуг, оказываемых в рамках программного обеспечения ERA.
