--- a/License/1.06.md
+++ b/License/1.06.md
@@ -98,7 +98,7 @@
 11. он будет своевременно производить обновление программного обеспечения ERA на своих компьютерах, по крайней мере не позже чем через один месяц с даты выхода новой версии ,программного обеспечения которая должна быть выложена Правообладателем программного обеспечения для свободной закачки с сайтах datachains.world и erachain.org.
 12. он признает Летопись как общедоступный источник данных.
 13. он предоставляет в открытый общий доступ свои личные (персональные) данные, такие как: идентификационный номер гражданина страны (ИНН, СНИЛС, все паспортные данные (номер и т.д.) и т.д.), Фамилия, Имя, Отчество, дата и место (гео-координаты) рождения, внешний вид в виде фотографии лица, цвета кожи, глаз и волос, рост, вес и пол, в результате чего они становятся общедоступными и считаются раскрытыми им самим и не подлежат защите, путём создания записи в Летописи содержащей этот набор данных (информацию) и подписанной его Электронной подписью. Он предоставляет только действительные личные данные и несет за правдивость их ответственность самостоятельно, а в случае их весомого изменения обязан внести дополняющую (заменяющую) Запись для устранения несоответствия своих личных (персональным) данных с данными в Летописи. 
-14. внесенные им в Летопись данные (информация) являются общедоступными и не подлежит защите от просмотра и копирования, причём статус общедоступности её не может быть изменен, а сами данные не могут быть удалены из Летописи. А в случае если он или третья  сторона по какой-либо причине потребует удалить его данные из общего доступа, то требующее лицо должно оплатить компенсацию 100-та богатейшим правовыми учетными единицами ERA Пользователям штраф в размере один миллион долларов.
+14. внесенные им в Летопись данные (информация) являются общедоступными и не подлежат защите от просмотра и копирования, причём статус общедоступности её не может быть изменен, а сами данные не могут быть удалены из Летописи. А в случае если он или третья  сторона по какой-либо причине потребует удалить его данные из общего доступа, то требующее лицо должно оплатить компенсацию 100-та богатейшим правовыми учетными единицами ERA Пользователям штраф в размере один миллион долларов.
 15. новые правила и порядок работы Летописи размещаются путем обновления настоящего Соглашения и в случае продолжения использования программного обеспечения ERA считаются принятыми им и обязательными для исполнения им.
 16. он признаёт полностью равнозначным заказному почтовому отправлению на бумажном носителе Зарубку, созданную и подписанную Участником-отправителем, в которой счётом получателя значится счёт, принадлежащий ему, причем он признаёт её получение под расписку и признаёт что открыл и прочел это отправление по прошествии 3-х суток как Запись стала Зарубкой (действительной).
 17. он создав запись “заверения”, код вида записи которой 40 (далее заверяющая запись), и указав в ней ссылку на другую Запись Летописи (далее заверяемая запись),  признает её подписание своей Электронной подписью, в том числе как её заверение, удостоверение или подтверждение данных и/или действий, запечатленных в заверяемой записи, причём он подтверждает что создатель заверяемой записи создал её не под принуждением, в здравом уме и и светлой памяти, а данные и/или действия в этой записи имеют место быть в действительности.
