--- a/languages/available.json
+++ b/languages/available.json
@@ -2,7 +2,7 @@
 	"ru": {
 		"_file_": "ru.json",
 		"_lang_name_": "Русский",
-		"_timestamp_of_translation_": 1496804461001,
+		"_timestamp_of_translation_": "1496804461001",
 		"download lang_name translation": "Скачать русский перевод",
 		"download update of lang_name translation from %date%": "Скачать обновление русского перевода от %date%"
 	}
