--- a/License/1.06.md
+++ b/License/1.06.md
@@ -147,4 +147,7 @@
 ## 10. Авторские Права и заимствование данной Лицензии
 Данное Соглашение является авторским произведением, все авторские права принадлежат Ермолаеву Дмитрию Сергеевичу, и может быть заимствовано другими правообладателями в качестве основы для лицензии на другие подобные программные обеспечения при условии присутствия в названии лицензии словосочетания «лицензия ERA», например, так «Лицензия ERA на программное обеспечение MySoft от правообладателя Имярек».
 
+## 11. Ссылки на заимствования
+Данное программное обеспечение разработано на основе программного продукта Qora по лицензии MIT, расположенного по ссылке https://github.com/Qoracoin/Qora
+
 > Written with [StackEdit](https://stackedit.io/).
