--- a/License/1.06.md
+++ b/License/1.06.md
@@ -116,9 +116,8 @@
 29. он, обладая некоторым количеством правовых единиц ERA на своём счету, получает право на голосование по вопросам изменения правил, протокола и порядка работы Летописи и/или программного обеспечения ERA, причём количество обладаемых им правовых единиц ERA задает количество его голосов. Голосования при этом могут производиться только при помощи программного обеспечения ERA.
 30. он признает любую запись, действие которой изменяет количество правовых единиц на счету, как переуступку прав требования, свершение которой произведено согласно порядку работы программного обеспечения ERA так что передающая и принимающая стороны определены этим порядком, если иное не определено в сообщении к этой записи или порядком (алгоритмом) исполнения этой записи.
 31. он соглашается что главенство (приоритет) порядка (алгоритма) понимания данных в записях Летописи определяется следующим порядком: указанными данными в самой записи Летописи, протоколом работы программного обеспечения ERA по виду записи, международным законодательством, законодательством страны, местным законодательством, общепринятым нормам права, где первый член порядка является самым главным, а главенство остальных падает по ходу их следования.
-32. он соглашается что последовательность знаков (символов) в виде знака «@» далее имени ERA в любом регистре (заглавные или строчные буквы) далее знака разделителя «:» далее целочисленного числа далее тире далее целочисленного числа указывает на действительную запись (Зарубку) в Летописи, где первое число указывает на номер (отсчет которого начинается с 1) набора записей, в которой эта запись находится, а второе число указывает на номер (отсчет которого начинается с 1) этой записи в этом наборе. Причем если данная последовательность содержится в записи Летописи, то имя ERA может быть опущено. Пример, @era.1543-12 или @.1543-12 - указывают на Зарубку в блоке 1543 с номером 12 в этом наборе.
-33. он соглашается что последовательность знаков (символов) в виде знака «@» далее имени ERA в любом регистре (заглавные или строчные буквы) далее знака разделителя «:» далее символа далее целочисленного числа указывает на сущность в Летописи, где символ указывает на вид сущности, а число указывает на номер (отсчет которого начинается с 1) записи в наборе Летописи этого вида сущностей, в которой представлено описание данной сущности. Причем если символом является буква "S", то это указывает на вид сущностей Назначение (Статус),  если - "P", то Личность (Персона), если "I" или "A", то Единица (Актив), если - "U", то Объединение (Союз). Вдобавок, если данная последовательность содержится в записи Летописи, то имя ERA может быть опущено. Пример, @era.P13 или @.P13 - указывают на сущность Личность, описанную в записи за номером 13, которая располагается наборе Личностей Летописи.
-34. он соглашается, что для записей, которые находятся в самой Летописи ERA, вместо последовательности символов: знака «@» далее имени ERA в любом регистре (заглавные или строчные буквы) далее знака разделителя «:», допустимо сокращение в виде двух символов «@», например так: @@12345-12 или @@P543.
+32. он соглашается что последовательность знаков (символов) в виде знака «@» далее имени ERA в любом регистре (заглавные или строчные буквы) далее знака разделителя «:» далее целочисленного числа далее тире далее целочисленного числа указывает на действительную запись (Зарубку) в Летописи, где первое число указывает на номер (отсчет которого начинается с 1) набора записей, в которой эта запись находится, а второе число указывает на номер (отсчет которого начинается с 1) этой записи в этом наборе. Причем если данная последовательность содержится в записи Летописи, то последовательность имени ERA и знака ":" могут быть заменены на знак @. Пример, @era:1543-12 или @@1543-12 - указывают на Зарубку в блоке 1543 с номером 12 в этом наборе.
+33. он соглашается что последовательность знаков (символов) в виде знака «@» далее имени ERA в любом регистре (заглавные или строчные буквы) далее знака разделителя «:» далее символа далее целочисленного числа указывает на сущность в Летописи, где символ указывает на вид сущности, а число указывает на номер (отсчет которого начинается с 1) записи в наборе Летописи этого вида сущностей, в которой представлено описание данной сущности. Причем если символом является буква "S", то это указывает на вид сущностей Назначение (Статус),  если - "P", то Личность (Персона), если "I" или "A", то Единица (Актив), если - "U", то Объединение (Союз). Вдобавок, если данная последовательность содержится в записи Летописи, то последовательность имени ERA и знака ":" могут быть заменены на знак @. Пример, @era:P13 или @@P13 - указывают на сущность Личность, описанную в записи за номером 13, которая располагается наборе Личностей Летописи.
 
 
 ## 5. Порядок создания новых Пользователей и их удостоверение
