--- a/languages/ru.json
+++ b/languages/ru.json
@@ -1,7 +1,7 @@
 {
 	"_lang_ISO_":"ru",
 	"_lang_name_":"Русский",
-	"_timestamp_of_translation_": "1496804461001",
+	"_timestamp_of_translation_": "1496804561001",
 	" ( * optional field )":" ( * дополнительное поле )",
 	" and start the application again.":" и запустите приложение снова.",
 	"( DO NOT USE your wallet's password. )":"( Не используйте Ваш пароль кошелька! )",
@@ -44,6 +44,7 @@
 	"All Persons":"Все персоны",
 	"All Polls":"Все Опросы",
 	"All Votes":"Сумма Голосов",
+	"Alive":"Живой",
 	"Allow for all":"Разрешить для всех",
 	"Allows forging even when your wallet is locked. You need to unlock it once.":"<html>Позволяет генерировать блоки даже когда Ваш кошелек заблокирован.<br>Вы должны разблокировать его один раз.</html>",
 	"Allows you to change the amount of simultaneous connections to the server.":"Позволяет изменить количество одновременных подключений к серверу.",
@@ -233,6 +234,7 @@
 	"Encrypted":"Зашифровано",
 	"Enter correct amount.":"Введите правильную сумму.",
 	"Enter correct price.":"Введите правильную цену.",
+	"Enter more  2 characters":"Введите более 2 символов",
 	"Enter wallet password":"Введите пароль",
 	"Erase":"Очистить",
 	"Error accepting new connection":"Ошибка принятия нового соединения",
@@ -252,6 +254,9 @@
 	"False":"Нет",
 	"false":"нет",
 	"Favorite":"Избранные",
+	"Favorite Assets":"Избранные Активы",
+	"Favorite Documents":"Избранные Документы",
+	"Favorite Persons":"Избранные Персоны",
 	"Fee":"Сбор",
 	"Fee below the minimum for this size of a transaction!":"Сбор ниже минимального для такого размера сделки!",
 	"fee less required":"Сбор меньше чем требуется",
@@ -265,8 +270,10 @@
 	"File Date":"Изменён",
 	"File Name":"Имя файла",
 	"File Type":"Тип файла",
+	"Fill field Search":"Заполните поле Поиск",
 	"Filter":"Фильтр",
 	"Filter column":"Фильтровать колонку",
+	"Find Key":"Найти Ключ",
 	"Folder":"Папка",
 	"Font":"Шрифт",
 	"for the given postid no blogpost to comment was found":"для данной позиции не найдено сообщений в блоге",
@@ -302,6 +309,7 @@
 	"If You want to confiscate in debt issued asset %asset%, fill in this form":"Если Вы хотите конфисковать выданный в долг актив %asset%, заполните эту форму ",
 	"If You want to give a loan asset %asset%, fill in this form":"Если Вы хотите дать в долг актив %asset%, заполните эту форму",
 	"If You want to give the borrowed asset %asset%, fill in this form":"Если Вы хотите отдать взятый в долг актив %asset%, заполните эту форму",
+	"If You want to take on hold issued asset %asset%, fill in this form":"",
 	"Import Hashs":"Импортировать Хэшы из файла",
 	"Imprints":"Отпечатки",
 	"INCOMING API CALL":"ВХОДЯЩИЙ API ЗАПРОС",
@@ -425,6 +433,7 @@
 	"My Documents":"Мои Документы",
 	"My Generated Blocks":"Мои сгенерированные блоки",
 	"My Imprints":"Мои Отпечатки",
+	"My Loans":"Мои Займы",
 	"My Names":"Мои Имена",
 	"My Orders":"Мои Ордера",
 	"My Persons":"Мои Персоны",
@@ -464,6 +473,9 @@
 	"No.":"№",
 	"No connections":"Нет соединения",
 	"No existing wallet was found.":"Не найдено существующего кошелька.",
+	"Not Found Documents":"Документы не найдены",
+	"Not Found Persons":"Персоны не найдены",
+	"Not Found Assets":"Активы не найдены",
 	"No recipient defined":"Получатель не определен",
 	"No Wallet":"Нет Кошелька",
 	"No":"Нет",
@@ -713,10 +725,10 @@
 	"true":"да",
 	"Twin hashes":"Дублированный Хэш",
 	"UI Settings":"Настройки Интерфейса",
-	"Unconfirmed":"Не подтвержденный",
-	"Unconfirmed Records":"Не подтвержденные Записи",
-	"Unconfirmed transactions":"Не подтвержденные Транзакции",
-	"Unencrypted":"Не зашифрованный",
+	"Unconfirmed":"Неподтвержденный",
+	"Unconfirmed Records":"Неподтвержденные Записи",
+	"Unconfirmed transactions":"Неподтвержденные Транзакции",
+	"Unencrypted":"Незашифрованный",
 	"Unions":"Объединения",
 	"Unknown error!":"Неизвестная ошибка",
 	"Unknown exception!":"Неизвестное исключение!",
@@ -885,7 +897,7 @@
 	"All on one page": "Всё на одной странице",
 	"Submit": "Отправить",
 	"Sorry, that page does not exist!": "Извините, такой страницы не существует!",
-	"You can search ERM web using the search box below": "Вы можете поискать в ERM-веб используя поля поиска ниже",
+	"You can search ERA web using the search box below": "Вы можете поискать в ERA-веб используя поля поиска ниже",
 	"This key is empty": "Этот ключ пуст",
 	"Namestorage repopulated!": "Хранилище Имён перезаполняется!",
 	"Unconfirmed transactions removed.": "Неподтверждённые транзакции удалены.",
