--- a/languages/en.json
+++ b/languages/en.json
@@ -77,7 +77,7 @@
 	"AT will be enabled at !":"AT will be deployed at !",
 	"AT":"AT",
 	"Attached Files":"Attached files",
-	"Attest Public Key for Person":"Send confirmation of a public key for person",
+//	"Attest Public Key for Person":"Send confirmation of a public key for person",
 	"Attention!":"Attention!",
 	"Available pairs":"Available pairs",
 	"Automated Transaction":"Auto transaction",
@@ -119,7 +119,7 @@
 	"Cancel Sale":"Cancellation of the sale",
 	"Cancel Sell Name Transaction":"Cancel the transaction of the name sale",
 	"Cancel Sell Name":"Cancel the transaction of the name sale",
-	"Cancel":"Cancellation",
+//	"Cancel":"Cancellation",
 	"Certified":"Certified",
 	"Character count: 0/4000":"Character number: 0/4000",
 	"Check":"Check",
@@ -285,6 +285,7 @@
 	"From Account":"From Account",
 	"From Date":"From Date",
 	"Fulfilled:":"Done:",
+	"Full Name":"Full Name",
 	"Gender":"Gender",
 	"Generate Payment":"Generate Payment",
 	"Generated Blocks":"Generated Blocks",
@@ -293,6 +294,7 @@
 	"Generator Key Caching":"Generator Key Caching",
 	"Genesis Transaction":"Genesis Transaction",
 	"Get Hash":"Calculate the hash",
+	"Growth":"Growth",	
 	"GUI enabled":"GUI enabled",
 	"GUI ERROR":"GUI error",
 	"Hair Ñolor":"Hair color",
@@ -335,7 +337,7 @@
 	"Invalid birthday [YYYY-MM-DD] or [YYYY-MM-DD hh:mm:ss]":"Invalid birthday [YYYY-MM-DD] or [YYYY-MM-DD hh:mm:ss]",
 	"Invalid deathday [YYYY-MM-DD] or [YYYY-MM-DD hh:mm:ss]":"Invalid day of death [YYYY-MM-DD] or [YYYY-MM-DD hh:mm:ss]",
 	"Invalid Coordinates of Birth, example: 43.123032, 131.917828":"Invalid Coordinates of Birth, example: 43.123032, 131.917828",
-	"Invalid height 10..255":"Invalid height 10..255",
+	"Invalid growth 10..255":"Invalid growth 10..255",
 	"invalid body it must not be empty":"invalid body, the body should not be empty",
 	"invalid buyer":"invalid buyer",  
 	"invalid comment owner":"invalid comment author",
@@ -482,7 +484,7 @@
 	"NOT EQUAL":"NOT EQUAL",
 	"Not enough balance!":"Not enough balance!", 
 	"not enough balance":"Not enough balance",
-	"OK":"YES",
+//	"OK":"YES",
 	"Open":"Open",
 	"Open Image":"Open Image",
 	"Open pair":"Open pair",
@@ -523,7 +525,7 @@
 	"Permission Request: ":"Permissions Request:",
 	"Persons":"Persons",
 	"Person confirm":"Confirmation of a person",
-	"Person number":"Insurance number (SNILS) of the personal account of the citizen",
+	"Person number":"Personal ID",
 	"Person not found":"Person not found",
 	"Please confirm your password":"Please, confirm your password",
 	"Please confirm your wallet seed":"Please, confirm your e-wallet seed",
