--- a/languages/ru.json
+++ b/languages/ru.json
@@ -1,7 +1,7 @@
 {
 	"_lang_ISO_":"ru",
 	"_lang_name_":"Русский",
-	"_timestamp_of_translation_": "1496804661001",
+	"_timestamp_of_translation_": "1496804661002",
 	" ( * optional field )":" ( * дополнительное поле )",
 	" and start the application again.":" и запустите приложение снова.",
 	"( DO NOT USE your wallet's password. )":"( Не используйте Ваш пароль кошелька! )",
@@ -966,8 +966,8 @@
 	"Search Votings":"Поиск Опросов",
 	"Issue Voting":"Создать Опрос",
 	"Work with Votings":"Работа с Опросами",
-	"DashBoard":"Обзор"	
-	"Network DashBoard":"Обзор Среды"	
+	"DashBoard":"Обзор",
+	"Network DashBoard":"Обзор Среды",
 	"Network Port":"Порт Сети",
 	"Unique Hash":"Единичные Хэши",
 	"Linked Hash":"Привязанные Хэши",
