--- a/languages/ru.json
+++ b/languages/ru.json
@@ -1,7 +1,7 @@
 {
 	"_lang_ISO_":"ru",
 	"_lang_name_":"Русский",
-	"_timestamp_of_translation_": "1496804661002",
+	"_timestamp_of_translation_": "1496804761002",
 	" ( * optional field )":" ( * дополнительное поле )",
 	" and start the application again.":" и запустите приложение снова.",
 	"( DO NOT USE your wallet's password. )":"( Не используйте Ваш пароль кошелька! )",
@@ -389,7 +389,7 @@
 	"Issue Template":"Создать Шаблон",
 	"Issue Union":"Создать Объединение",
 	"Issue Unique Hash":"Создать Единичный Хэш",
-	"Issue Linked Hashes":"Создать Привязанный Хэш",
+	"Issue Linked Hash":"Создать Привязанный Хэш",
 	
 	"Imprint issue has been sent!":"Выпуск Отпечатка заявлен!",
 	"I Owner":"Я Собственник",
@@ -613,9 +613,9 @@
 	"Search Statements":"Поиск Заявления",
 	"Search Statuses":"Поиск Статуса",
 	"Search Templates":"Поиск шаблона",
-	"Search Unions":"Поиск Объединения",
-	"Search Unique Hashes":"Поиск Единичные Хэши",
-	"Search Linked Hashes":"Найти Привязанный Хэш",
+	"Search Unions":"Найти Объединения",
+	"Search Unique Hashes":"Найти Единичные Хэши",
+	"Search Linked Hash":"Найти Привязанный Хэш",
 	"Select pair":"Выбрать пару",
 	"Select Template":"Выберите Шаблон",
 	"Select Account":"Выберите Счет",
@@ -969,7 +969,7 @@
 	"DashBoard":"Обзор",
 	"Network DashBoard":"Обзор Среды",
 	"Network Port":"Порт Сети",
-	"Unique Hash":"Единичные Хэши",
-	"Linked Hash":"Привязанные Хэши",
+	"Unique Hashes":"Единичные Хэши",
+	"Linked Hashes":"Привязанные Хэши",
 	"":""
 }
