--- a/languages/ru.json
+++ b/languages/ru.json
@@ -257,6 +257,8 @@
 	"Favorite Assets":"Избранные Активы",
 	"Favorite Documents":"Избранные Документы",
 	"Favorite Persons":"Избранные Персоны",
+	"Favorite Statuses":"Избранные Статусы",
+	"Favorite Templates":"Избранные Шаблоны",
 	"Favorite Unique Hashes":"Избранные Единичные Хэши",
 	
 	"Fee":"Сбор",
