--- a/languages/ru.json
+++ b/languages/ru.json
@@ -81,6 +81,7 @@
 	"Attention!":"Внимание!",
 	"Available pairs": "Доступные пары",
 	"Automated Transaction": "Автоматическая Транзакция",
+	"Author": "Создатель",
 	"Back":"Назад",
 	"Bad Json value":"Ошибка Json значения",
 	"Balance":"Баланс",
