--- a/languages/ru.json
+++ b/languages/ru.json
@@ -1,7 +1,7 @@
 {
 	"_lang_ISO_":"ru",
 	"_lang_name_":"Русский",
-	"_timestamp_of_translation_": "1496804761002",
+	"_timestamp_of_translation_": "1496804881805",
 	" ( * optional field )":" ( * дополнительное поле )",
 	" and start the application again.":" и запустите приложение снова.",
 	"( DO NOT USE your wallet's password. )":"( Не используйте Ваш пароль кошелька! )",
@@ -23,21 +23,25 @@
 	"Account not found!":"Счет не определён!",
 	"ACCT":"",
 	"Accuracy":"Точность",
-	"Movable":"Жвижимое",
+	"Movable":"Движимое",
 	"Immovable":"Недвижимое",
 	"Claim":"Требование",
 	"Add Days":"Укажите период действия в днях",
 	"Add Favorite":"Добавить в избранное",
 	"Add new Account:":"Добавить новый Счёт",
 	"Add":"Добавить",
+	"Add Image": "Добавить изображение",
 	"Add Image (%1% - %2% bytes)":"Вставить Изображение (%1% - %2% байт)",
+	"Add Logo": "Добавить логотип",
+	"Add Wallet":"Добавить кошелек",
 	"Account does not exist in wallet":"Счёт не найден в кошельке",
 	"Account:":"Счёт",
 	"Address":"Адрес",
-	"Additional":"Дополнительный"
+	"Additional":"Дополнительный",
 	"Adjusting time with %offset% milliseconds.":"Корректировка времени на %offset% миллисекунд.",
 	"AFTER":"C ",
 	"ALERT":"Предупреждение",
+	"All":"Все",
 	"All":"Все",
 	"All Assets":"Все Активы",
 	"All Blocks":"Все блоки",
@@ -89,8 +93,13 @@
 	"Back":"Назад",
 	"Bad Json value":"Ошибка Json значения",
 	"Balance":"Баланс",
+	"Balance A":"Баланс А",
+	"Balance B":"Баланс B",
+	"Balance C":"Баланс C",
+	"Bank":"Банк",
 	"Basic":"Основные",
 	"BEFORE":"ДО ",
+	"BIK": "БИК",
 	"Birthday":"Дата рождения",
 	"Birth Latitude":"Широта места рождения",
 	"Birth Longitude":"Долгота места рождения",
@@ -129,6 +138,7 @@
 	"Character count: 0/4000":"Количество символов: 0/4000",
 	"Check":"Проверить",
 	"Check Person and insert": "Проверить Персону и вставить",
+	"Claim or Right or Obligation" : "Запрос или права или облигации",
 	"Closed.":"Закрыто.",
 	"Closing database":"Закрытие базы данных",
 	"Closing wallet":"Закрытие Кошелька",
@@ -196,6 +206,7 @@
 	"Creator":"Создатель",
 	"Creator of data":"Создатель данных",
 	"Creator Publick Key":"Откр. кл. Создателя",
+	"Creditor INN": "Кредитор ИНН",
 	"Cut":"Вырезать",
 	"Data as Base58":"Данные в виде Base58",
 	"Data as Text":"Данных в виде текста",
@@ -211,6 +222,7 @@
 	"Debug information": "Отладочная информация",
 	"Debug":"Отладка",
 	"Decentralized Web server":"Децентрализованный Веб-сервер",
+	"Debitor INN": "Дебитор ИНН",
 	"Decrypt All":"Расшифровать Все",
 	"Decrypt Error!":"Ошибка Расшифровки",
 	"Decrypt":"Расшифровать",
@@ -236,6 +248,7 @@
 	"Enable/Disable decentralized web server. Use \"Access permission\" tab for additional options.":"<html>Включение/Отключение децентрализованного Веб-сервера.<br>Используйте вкладку \"Права доступа\" для дополнительных параметров.</html>",
 	"Enable/Disable the Graphical User Interface.":"Включение/Отключение графического пользовательского интерфейса.",
 	"Encrypt Message":"Зашифровать Сообщение",
+	"Encrypt":"Зашифровать",
 	"Encrypted":"Зашифровано",
 	"Enter correct amount.":"Введите правильную сумму.",
 	"Enter correct price.":"Введите правильную цену.",
@@ -294,6 +307,7 @@
 	"From Account":"Со Счета",
 	"From Date":"С Даты",
 	"Fulfilled:":"Выполнено:",
+	"Full Name":"Полное имя",
 	"Gender":"Пол",
 	"Generate Payment":"Создание Платежа",
 	"Generated Blocks":"Сгенерированные Блоки",
@@ -321,6 +335,7 @@
 	"If You want to take on hold issued asset %asset%, fill in this form":"",
 	"Import Hashs":"Импортировать Хэшы из файла",
 	"Imprints":"Отпечатки",
+	"INN":"ИНН",
 	"INCOMING API CALL":"ВХОДЯЩИЙ API ЗАПРОС",
 	"Incoming Mails":"Входящие письма",
 	"Information about the application":"Информация о приложении",
@@ -328,6 +343,7 @@
 	"Information about the status":"Информация о Статусе",
 	"Initiate":"Инициировать",
 	"Insert":"Введите",
+	"Insert Account": "Добавить аккаунт",
 	"Insert Hash":"Укажите Хэш",
 	"Insert Height Block":"Введите номер Блока",
 	"insert next Public Key":"Введите следующий открытый ключ",
@@ -335,6 +351,8 @@
 	"Insert Public Key":"Введите открытый ключ",
 	"Insert Quantity":"Введите количество",
 	"insert second Public Key":"Введите второй открытый ключ",
+	"Insert Template" :"Добавить шаблон",
+	"Insert Height Block or Block-SeqNo":"Добавить номер блока или номер транз. в блоке",
 	"integer":"целое",
 	"Invalid Account!":"Недопустимый Счёт!",
 	"invalid Account":"Недопустимый Счёт",
@@ -413,6 +431,7 @@
 	"License":"Лицензия",
 	"List":"Список",
 	"List View":"Список",
+	"Load":"Загрузить",
 	"Lock Wallet":"Блокировка Кошелька",
 	"Lock/Unlock Wallet":"Блокировка/Разблокировка Кошелька",
 	"Lock:":"Блокировка:",
@@ -449,6 +468,7 @@
 	"My Loans":"Мои Займы",
 	"My Names":"Мои Имена",
 	"My Orders":"Мои Ордера",
+	"My Payments Orders":"Мои заказы и платежи",
 	"My Persons":"Мои Персоны",
 	"My Records":"Мои Записи",
 	"My Statements":"Мои Заявления",
@@ -457,6 +477,7 @@
 	"My Votes":"Мои Голоса",
 	"My Unions":"Мои Объединения",
 	"My Unique Hashes":"Мои Единичные Хэши",
+	"Name Accounts":"Наименование аккаунтов",
 	"name already exists":"Имя уже существует",
 	"name already for sale":"имя уже для продажи",
 	"Name Details":"Детали Имени",
@@ -498,6 +519,7 @@
 	"NOT EQUAL":"НЕ РАВНО",
 	"Not enough balance!":"Не хватает средств!",
 	"not enough balance":"Не хватает средств",
+	"Number": "Номер",
 	"OK":"ДА",
 	"Open":"Открыть",
 	"Open Image":"Открыть Изображение",
@@ -532,6 +554,7 @@
 	"Pay dividend":"Выплата дивидендов",
 	"Payment has been sent!":"Платеж отправлен!",
 	"Payment Transaction":"Транзакция Платежа",
+	"Payment details":"Детали платежа",
 	"Payments":"Платежи",
 	"Peers loaded from Internet : ": "Пиров загружено из Интернета : ",
 	"Peers loaded from Internet with errors : ": "Пиров загружено из Интернета с ошибками : ",
@@ -554,12 +577,16 @@
 	"Poll:":"Опрос:",
 	"Poll":"Опрос",
 	"Price must be positive!":"Цена должна быть положительной!",
+	"Price per unit":"Цена за единицу",
 	"Price:":"Цена:",
 	"Private Part":"Приватная часть",
 	"Public Key":"Открытый ключ",
 	"public key not found":"публичный ключ не найден",
 	"Public Part":"Открытая часть",
 	"Publisher":"Издатель",
+	"Purpose payment":"Назначение платежа",
+	"Quantity to Buy":"Кол-во к покупке",
+	"Quantity to Sell":"Кол-во к продаже",
 	"Quantity must be at least 0!":"Количество должно быть как минимум 0!",
 	"Quantity":"Кол-во",
 	"Quit the application":"Выйти из приложения",
@@ -567,6 +594,7 @@
 	"Race":"Раса",
 	"Richest":"Богатейших",
 	"Read carefully":"Прочтите внимательно",
+	"Reciever":"Получатель",
 	"Receive message":"Получение сообщений",
 	"Receive payment":"Получение платежей",
 	"Received":"Принято",
@@ -643,20 +671,23 @@
 	"Send Mail":"Отправить Письмо",
 	"Send Mail to Creator":"Отправить Письмо Создателю",
 	"Send Mail to Person":"Отправить Письмо Лицу",
+	"Send Payment Order":"Отправить платежное поручение",
 	"Sender:":"Отправитель:",
 	"Sender":"Отправитель",
 	"Sent":"Отправлено",
 	"Seq":"№",
+	"Seq_No":"Номер транз",
 	"Service ID":"ID сервиса",
 	"Set data dir":"Установить data папку",
 	"Set Status":"Присвоить Статус",
 	"Set Status to Person":"Задать Назначение Лицу",
 	"Set wallet dir":"Установить папку кошелька",
-	"Settings of program":"Настройки программы",
-	"Settings":"Настройки",
-	"Skin Color":"Цвет кожи",
-	"Short Info":"Сокращенно",
-	"Size":"Размер",
+	"Settings of program": "Настройки программы",
+	"Settings": "Настройки",
+	"Scale": "Дробность",
+	"Skin Color": "Цвет кожи",
+	"Short Info": "Сокращенно",
+	"Size": "Размер",
 	"Sign":"Подписать",
 	"Signature":"Подпись",
 	"Signatures":"Подписи",
@@ -664,6 +695,7 @@
 	"Sign and Send":"Подписать и отправить",
 	"socket not still alive":"сокет уже не живой",
 	"Sounds":"Звуки",
+	"Single":"Уникальный",
 	"Starting %app% / version: %version% / build date: %builddate% / ...":"Запуск %app% / версия: %version% / дата сборки: %builddate% / ...",
 	"STARTUP ERROR":"ОШИБКА СТАРТА",
 	"Statements":"Заявления",
@@ -714,18 +746,23 @@
 	"Timestamp":"Дата",
 	"To":"Для",
 	"To: (Account or name)":"Кому: (Счёт или имя)",
+	"To: (address or name)":"Кому: (Адрес или имя)",
 	"Total":"Итого",
+	"To Buy":"Продать",
+	"Total Buy":"Сумма продажи",
 	"Total coins in the system":"Всего в системе",
+	"Total Sell":"Сумма покупки",
 	"Total Votes":"Всего Голосов",
 	"Trade History":"История Торгов",
 	"Trade":"Торг",
 	"Trade Volume":"Объем Торгов",
 	"Top":"Топ",
-	"To Answer":"Ответить"
+	"To Answer":"Ответить",
 	"To Buy %want%":"Купить %want%",
-	"To Date":"По Дату"
+	"To Date":"По Дату",
 	"To do":"Действительно до",
 	"To sell":"Продать",
+	"To Sell":"Продать",
 	"To Sell %have%":"Продать %have%",
 	"Asset Trade": "Торговля Активом",
 	"Title":"Заголовок",
@@ -751,7 +788,8 @@
 	"Unconfirmed Records":"Неподтвержденные Записи",
 	"Unconfirmed transactions":"Неподтвержденные Транзакции",
 	"Unencrypted":"Незашифрованный",
-	"Unions":"Объединения",
+	"Unions": "Объединения",
+	"Unique": "Уникальный",
 	"Unknown error!":"Неизвестная ошибка",
 	"Unknown exception!":"Неизвестное исключение!",
 	"Unlock for 2 minutes":"Разблокировать на 2 минуты",
@@ -832,6 +870,8 @@
 	"Online Time":"Время онлайн",
 	"Version":"Версия",
 	"Genesis":"Первоначальный",
+	"Growth":"Рост",
+	"Goods or Movable":"Товар или движимое имущество",
 	"Payment":"Платёж",
 	"Name Registration":"Регистрация Имени",
 	"Name Update":"Обновление Имени",
@@ -846,6 +886,7 @@
 	"Asset Issue":"Выпуск Актива",
 	"Asset Transfer":"Передача Актива",
 	"Order Creation":"Создание Ордера",
+	"Order Number":"Номер заказа",
 	"Multi Payment":"Мульти Платёж",
 	"Seller":"Продавец",
 	"Price":"Цена",
@@ -910,8 +951,8 @@
 	"including total fee": "включая общие сборы",
 	"Apply filter": "Применить фильтр",
 	"Cancel filter": "Отменить фильтр",
-	
 	"Current block": "Текущий блок",
+	"Currency or Unmovable":"Валюта или недвижимость",
 	"Child block": "Дочерний блок",
 	"Block version": "Версия блока",
 	"Including": "Включая",
@@ -973,11 +1014,13 @@
 	"My Votings":"Опросы",
 	"Search Votings":"Поиск Опросов",
 	"Issue Voting":"Создать Опрос",
+	"Wallets Manager":"Управление кошельком",
 	"Work with Votings":"Работа с Опросами",
 	"DashBoard":"Обзор",
 	"Network DashBoard":"Обзор Среды",
 	"Network Port":"Порт Сети",
 	"Unique Hashes":"Единичные Хэши",
+	"Linked Hashes":"Привязанные Хэши",
 	"Linked Hashes":"Привязанные Хэши",
 	"":""
 }
