--- a/sample/prikaz_2018-05-21-a.md
+++ b/sample/prikaz_2018-05-21-a.md
@@ -1,9 +1,9 @@
 ## ПРИКАЗ № {{ORDER}}
-По обществу {{UNION}}, далее Общество, в целях ведения учета юридически-значимых действий (документооборота и взаимоотношений) как внутри Общества так и с третьими лицами, а также в целях ведения учёта оборота и хранения цифровых учетных и правовых единиц цифровой Летописи Erachain, настоящим
+По обществу **{{UNION}}**, далее Общество, в целях ведения учета юридически-значимых действий (документооборота и взаимоотношений) как внутри Общества так и с третьими лицами, а также в целях ведения учёта оборота и хранения цифровых учетных и правовых единиц цифровой Летописи Erachain, настоящим
 
 ### ПРИКАЗЫВАЮ:
 
-1. Использовать программное обеспечение Erachain, расположенное для скачивания на сайте в интернете по адресу **[erachain.org](http://erachain.org)**, использующее для связи порт 9046 и имеющее первый набор записей с электронной подписью в формате Base58   
+1. Использовать программное обеспечение **Erachain**, расположенное для скачивания на сайте в интернете по адресу **[erachain.org](http://erachain.org)**, использующее для связи порт 9046 и имеющее первый набор записей с электронной подписью в формате Base58   
 **V5RkNcBrDi88Tbkm71DN1Po7M7yEop9kpu95gxHjPvR7MDa3uMkYotvGJ8awRTmz2abBEGXShZptrVdzmwuMsag**  
 2. Принять все термины используемые в данном приказе из списка терминов в Лицензии на программное обеспечение Erachain, и признать все ограничения, права, соглашения и обязательства вытекающие из Лицензии на программное обеспечение Erachain также действующими для Общества.  
 3. Установить на компьютере работников, список которых указан в Приложении №1, программное обеспечение Erachain.  
@@ -13,11 +13,11 @@
 7. В случае если другой стороной совершаемых юридически-значимых действий является юридическое лицо, то оно должно сослаться на документ (приказ, положение и т. д.), в котором оно признаёт все термины, ограничения, права, соглашения и обязательства вытекающие из Лицензии на программное обеспечение Erachain  
 7. При подписании договора на бумажном носителе, взаимоотношения по которому планируется производить в программном обеспечении Erachain, данный договор должен содержать пункт об электронных взаимоотношениях в программном обеспечении Erachain.  
 8. Ответственность за сохранность своих ключей (тайных ключей) Электронной подписи несет каждый работник самостоятельно.   
-9. Развернуть на вычислительных мощностях Общества по крайней мере одну единицу рабочей версии программного обеспечения Erachain и предоставить к ней доступ извне по ссылке {{DOMEN}} для интернет запросов - (blockexplorer), а также по порту WEB-сервиса 9047. Ответственным за работу программного обеспечения и доступ к нему извне возложить на системного администратора {{SYSADM}}.  
+9. Развернуть на вычислительных мощностях Общества по крайней мере одну единицу рабочей версии программного обеспечения Erachain и предоставить к ней доступ извне по ссылке **{{DOMEN}}** для интернет запросов - (blockexplorer), а также по порту WEB-сервиса 9047. Ответственным за работу программного обеспечения и доступ к нему извне возложить на системного администратора **{{SYSADM}}**.  
 10. На сайте Общества данные работников дополнить их номерами в Летописи с соответствующими ссылками на них на WEB-сервис.  
 9. Ознакомить руководителей структурных подразделений, список которых указан в Приложении №2, с настоящим приказом и обеспечить доступ ответственным лицам к подписанным Электронной подписью документам в программном обеспечении Erachain. Ознакомление подтверждается записью заверения, созданной соответствующим работником Общества в программном обеспечении Erachain к данной записи Приказа.  
 10. Местом хранения принадлежащих Обществу цифровых учетных и правовых единиц, обслуживаемых программным обеспечением Erachain, признать мой счет в Летописи Erachain, с которого совершена запись создания данного приказа в Летописи Erachain, - далее Счет хранения. Материальную ответственность хранения единиц в Летописи Erachain, расположенных на счёте Хранения, возлагаю на себя.  
-11. Остаток средств на Счёте хранения на дату создания данной записи в количестве {{VALUE}} COMPU зачесть в пользу Общества как финансовую помощь учредителя.  
+11. Остаток средств на Счёте хранения на дату создания данной записи в количестве **{{VALUE}}** COMPU зачесть в пользу Общества как финансовую помощь учредителя.  
 12. Контроль за исполнением Приказа возлагаю на себя.  
 
 #### Где подстановки имеют значения:  
