--- a/sample/prikaz_2018-05-21-a.md
+++ b/sample/prikaz_2018-05-21-a.md
@@ -21,8 +21,8 @@
 12. Контроль за исполнением Приказа возлагаю на себя.  
 
 #### Где подстановки имеют значения:  
-+ ORDER =  номер приказа
-+ UNION = юридическое лицо (Наименование, ОГРН или ИНН)
-+ VALUE = количество правовых единиц COMPU
-+ SYSADM = администратор
-+ DOMEN = 
++ ORDER =  номер приказа  
++ UNION = юридическое лицо (Наименование, ОГРН или ИНН)  
++ VALUE = количество правовых единиц COMPU  
++ SYSADM = администратор  
++ DOMEN = URL сайта блокэксплорера
