--- a/languages/ru.json
+++ b/languages/ru.json
@@ -31,7 +31,7 @@
   "Add new Account:": "Добавить новый Счёт",
   "Add": "Добавить",
   "Add Image": "Добавить изображение",
-  "Add Image (%1% - %2% bytes)": "Вставить Изображение (%1% - %2% байт)",
+  "Add Image (%1% - %2% bytes)": "Вставить изображение (%1% - %2% байт)",
   "Add Logo": "Добавить логотип",
   "Add Wallet": "Добавить кошелек",
   "Account does not exist in wallet": "Счёт не найден в кошельке",
@@ -68,7 +68,7 @@
   "Amount:": "Кол-во:",
   "Amount": "Кол-во",
   "An API call needs authorization!": "Вызова API требует авторизации!",
-  "Anyone who has access to your seed will have access to your wallet.": "Всем, кто знает Ваш Seed будут иметь доступ к вашему кошельку.",
+  "Anyone who has access to your seed will have access to your wallet.": "всем, кто знает ваш ключ будут иметь доступ к вашему кошельку.",
   "Asset Details": "Сведения об Активах",
   "Asset Exchange": "Обмен Активами",
   "Asset issue has been sent!": "Актив отправлен!",
@@ -126,7 +126,7 @@
   "Buyer": "Покупатель",
   "Buying amount:": "Сумма покупки",
   "Buying price:": "Цена покупки",
-  "By confirming your wallet seed we know you have saved the seed.": "Подтверждая Seed Вашего кошелька Вы даёте знать, что Вы сохранили Seed.",
+  "By confirming your wallet seed we know you have saved the seed.": "Подтверждая мастер-ключ вашего кошелька вы даёте знать, что вы сохранили мастер-ключ.",
   "Cancel name sale has been sent!": "Отмена продажи имени отправлена",
   "Cancel order has been sent!": "Отмена ордера была отправлена!",
   "Cancel Order Transaction": "Транзакция отмены Ордера",
@@ -187,7 +187,7 @@
   "Copy Recipient": "Копировать Получателя",
   "Copy Secret Hash": "Копировать секретный Хэш",
   "Copy Referince": "Копировать референс",
-  "Copy Seed": "Копировать Seed",
+  "Copy Seed": "Копировать мастер-ключ",
   "Copy Sender Account": "Копировать Счёт Отправителя",
   "Copy Sender": "Копировать Отправителя",
   "Copy Signature": "Копировать подпись",
@@ -201,6 +201,7 @@
   "Create Wallet": "Создать Кошелек",
   "Create": "Создать",
   "Created person": "Созданные персоны",
+  "Created by default Account":"Создано счетом по умолчению",
   "Create and insert Person": "Создать и вставить Персону",
   "Create Person and copy to clipboard": "Создать Персону и скопировать в буфер обмена",
   "Creation date:": "Дата создания:",
@@ -431,9 +432,10 @@
   "Issue Unique Hash": "Создать Единичный Хэш",
   "Issue Linked Hash": "Создать Привязанный Хэш",
   "Issue Poll": "Создать голосование",
+  "Item": "Пункт",
   "Imprint issue has been sent!": "Выпуск Отпечатка заявлен!",
   "I Owner": "Я Собственник",
-  "KEEP THIS SEED PRIVATE AND SECURE!": "СОХРАНЯЙТЕ ЭТОТ SEED В ТАЙНЕ И БЕЗОПАСНОСТИ",
+  "KEEP THIS SEED PRIVATE AND SECURE!": "СОХРАНИТЕ ЭТОТ КЛЮЧ В ТАЙНЕ И БЕЗОПАСНОСТИ",
   "key already exists, edit is false": "ключ уже существует, редактируйте иначе",
   "Key": "Ключ",
   "Key:": "Ключ:",
@@ -453,7 +455,7 @@
   "Look in": "Смотреть в",
   "Mails": "Письма",
   "Male": "Мужской",
-  "Make sure your seed is in base58 format.": "Убедитесь, что ваш Seed имеет base58 Формат.",
+  "Make sure your seed is in base58 format.": "Убедитесь, что ваш  имеет base58 Формат.",
   "Maked": "Создано",
   "Man": "Мужской",
   "MAX days": "Макасимальное количество дней",
@@ -472,6 +474,7 @@
   "Movable": "Движимое",
   "Multi Payment Transaction": "Транзакция Мультиплатежа",
   "My": "Мои",
+  "My Account": "Мой счет",
   "My Accounts": "Мои Счета",
   "My Assets": "Мои Активы",
   "My Balance": "Мой Баланс",
@@ -585,10 +588,10 @@
   "Person confirm": "Подтверждение Персоны",
   "Person number": "Номер СНИЛС",
   "Person not found": "Персона не найдена",
-  "Please confirm your password": "Пожалуйста, подтвердите Ваш пароль",
-  "Please confirm your wallet seed": "Пожалуйста, подтвердите Seed Вашего кошелька",
-  "Please enter your wallet password": "Пожалуйста, введите пароль Вашего кошелька",
-  "Please enter your wallet seed": "Пожалуйста, введите Seed Вашего кошелька",
+  "Please confirm your password": "Пожалуйста, подтвердите ваш пароль",
+  "Please confirm your wallet seed": "Пожалуйста, подтвердите мастер-ключ вашего кошелька",
+  "Please enter your wallet password": "Пожалуйста, введите пароль вашего кошелька",
+  "Please enter your wallet seed": "Пожалуйста, введите мастер-ключ вашего кошелька",
   "poll already exists": "голосование уже существует",
   "Poll creation has been sent!": "Создание Опроса отправлено!",
   "Poll Details": "Детали Опроса",
@@ -628,7 +631,7 @@
   "Recipients": "Получатели",
   "Records": "Записи",
   "Record has been certified": "Запись заверена",
-  "Recover a wallet using an existing seed": "Восстановить кошелек с помощью существующего seed",
+  "Recover a wallet using an existing seed": "Восстановить кошелек с помощью существующего мастер-ключа",
   "Recover Wallet": "Восстановить Кошелек",
   "RecNo": "№ Транзакции",
   "Reference": "Ссылка",
@@ -684,7 +687,7 @@
   "Sell Name Transaction": "Транзакция Продажи Имени",
   "Sell Name": "Продажа Имени",
   "Sell Orders": "Ордера на продажу",
-  "Sell": "Продажа",
+  "Sell": "Продать",
   "Select File": "Выберите Файл",
   "Send": "Отправить",
   "Send Asset": "Отправить Актив",
@@ -706,6 +709,7 @@
   "Set wallet dir": "Установить папку кошелька",
   "Settings of program": "Настройки программы",
   "Settings": "Настройки",
+  "Set the Wallet directory or leave it as default":"Введите расположение вашего кошелька или оставьте по умолчанию",
   "Scale": "Дробность",
   "Skin Color": "Цвет кожи",
   "Short Info": "Сокращенно",
@@ -763,13 +767,14 @@
   "This Imprint already exists!": "Такой Отпечаток уже существует!",
   "this blog is disabled": "этот блог отключен",
   "this blog is empty": "этот блог пуст",
-  "This seed is the result of a Base58 encoded 256bit random key.": "Этот seed - результат Base58-закодированного случайного 256-битного ключа.",
-  "This seed will allow you to recover your wallet if you would accidently delete the wallet file.": "Этот Seed позволит вам восстановить Ваш кошелек, если вы случайно удалите файл Кошелька.",
+  "This seed is the result of a Base58 encoded 256bit random key.": "Этот ключ является результатом Base58-закодированного случайного 256-битного ключа.",
+  "This seed will allow you to recover your wallet if you would accidently delete the wallet file.": "Этот ключ позволит вам восстановить ваш кошелек, если вы случайно удалите файл кошелька.",
   "Timestamp:": "Дата:",
   "Timestamp": "Дата",
   "To": "Для",
   "To: (Account or name)": "Кому: (Счёт или имя)",
   "To: (address or name)": "Кому: (Счет или публичный ключ)",
+  "To: (Account ERA)":"Кому: (Счет ERA)",
   "Total": "Итого",
   "To Buy": "Купить",
   "Total Buy": "Сумма продажи",
@@ -884,7 +889,7 @@
   "You need to add atleast one key/value pair to properly update the name.": "Вам нужно добавить хотя бы одну пару ключ/значение, чтобы правильно обновить имя.",
   "You need to register a name to create a profile.<br>": "Вам нужно зарегистрировать имя для создания профиля.<br>",
   "You": "Вы",
-  "Your wallet generation seed:": "Ваш Seed для создания кошелька:",
+  "Your wallet generation seed": "Ваш мастер-ключ для создания кошелька",
   "Your wallet is initialized": "Ваш кошелек инициализирован",
   "IP": "IP",
   "Ping mc": "Пинг мс",
